src/objects/BT_CO_CMISPOP_ImportVendorStaff__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fullName__c</fullName>
        <label>fullName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loginId__c</fullName>
        <label>loginId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nricPassport__c</fullName>
        <label>nricPassport</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pagerNumber__c</fullName>
        <label>pagerNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telephoneNumber__c</fullName>
        <label>telephoneNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vendorCode__c</fullName>
        <label>vendorCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vendorGroup__c</fullName>
        <label>vendorGroup</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_CMISPOP_ImportVendorStaff</label>
    <nameField>
        <label>BT_CO_CMISPOP_ImportVendorStaff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_CMISPOP_ImportVendorStaff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>